[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/UI/SeleccionTanque.gd" type="Script" id=2]
[ext_resource path="res://clic.wav" type="AudioStream" id=3]
[ext_resource path="res://efecto de sonido de boton portal 2.wav" type="AudioStream" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.231
anchor_top = 0.215
anchor_right = 0.231
anchor_bottom = 0.215
margin_left = 0.455994
margin_right = 542.456
margin_bottom = 381.0

[node name="Label" type="Label" parent="Panel"]
margin_left = 214.0
margin_top = 75.0
margin_right = 316.0
margin_bottom = 121.0
text = "ELEGIR TANQUE"

[node name="btnTanque1" type="TextureButton" parent="Panel"]
margin_left = 223.0
margin_top = 167.0
margin_right = 291.0
margin_bottom = 231.0
texture_normal = ExtResource( 1 )

[node name="btnTanque2" type="TextureButton" parent="Panel"]
margin_left = 109.0
margin_top = 166.0
margin_right = 178.0
margin_bottom = 230.0
texture_normal = ExtResource( 1 )

[node name="btnTanque3" type="TextureButton" parent="Panel"]
margin_left = 334.0
margin_top = 169.0
margin_right = 401.0
margin_bottom = 233.0
texture_normal = ExtResource( 1 )

[node name="sonidoss" type="Node2D" parent="." groups=["s"]]

[node name="CLICK" type="AudioStreamPlayer2D" parent="sonidoss"]
stream = ExtResource( 3 )

[node name="CLICK2" type="AudioStreamPlayer2D" parent="sonidoss"]
stream = ExtResource( 4 )

[connection signal="button_down" from="Panel/btnTanque1" to="." method="_on_btnTanque1_button_down"]
[connection signal="mouse_entered" from="Panel/btnTanque1" to="." method="_on_btnTanque1_mouse_entered"]
[connection signal="pressed" from="Panel/btnTanque1" to="." method="_on_btnTanque1_pressed"]
[connection signal="button_down" from="Panel/btnTanque2" to="." method="_on_btnTanque2_button_down"]
[connection signal="mouse_entered" from="Panel/btnTanque2" to="." method="_on_btnTanque2_mouse_entered"]
[connection signal="pressed" from="Panel/btnTanque2" to="." method="_on_btnTanque2_pressed"]
[connection signal="button_down" from="Panel/btnTanque3" to="." method="_on_btnTanque3_button_down"]
[connection signal="mouse_entered" from="Panel/btnTanque3" to="." method="_on_btnTanque3_mouse_entered"]
[connection signal="pressed" from="Panel/btnTanque3" to="." method="_on_btnTanque3_pressed"]
